--- a/医院挂号平台/css/ui.css
+++ b/医院挂号平台/css/ui.css
@@ -1,3 +1,4 @@
+/* ui-search */
 .ui-search{
     background: url(../img/ui-search.jpg) center no-repeat;
     font-size: 14px;
@@ -52,4 +53,159 @@
     right: 0px;
     width: 37px;
     height: 37px;
+}
+
+/* ui-menu */
+.ui-menu-item{
+    height: 22px;
+    line-height: 22px;
+    margin-left: 2px;
+}
+.ui-menu-item:hover{
+    background-color: #fff;
+}
+.ui-menu-item:hover .ui-menu-item-department{
+    color: #333;
+}
+.ui-menu-item:hover .ui-menu-item-disease{
+    color: #868686;
+}
+.ui-menu-item:hover .ui-menu-item-detail{
+    display: block;
+}
+.ui-menu-item-department{
+    float: left;
+    height: 22px;
+    line-height: 22px;
+    position: relative;
+    padding-left: 30px;
+    font-size: 13px;
+    color: #fff;
+}
+.ui-menu-item-disease{
+    font-size: 12px;
+    float: right;
+    padding: 0 5px;
+    color: #d7f3ff;
+}
+.ui-menu-item-detail{
+    display: none;
+    position: absolute;
+    width: 500px;
+    height: 392px;
+    padding: 20px 10px 10px 29px;
+    background-color: #eee;
+    left: 240px;
+    box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.1);
+    z-index: 999;
+}
+.ui-menu-item-detail-group{
+    padding-bottom: 20px;
+    text-align: left;
+}
+.ui-menu-item-detail-group-caption{
+    width: 100%;
+    display: block;
+    height: 34px;
+    line-height: 34px;
+    color: #666;
+    font-size: 16px;
+    font-weight: bold;
+}
+.ui-menu-item-detail-group-list{
+    line-height: 23px;
+}
+.ui-menu-item-detail-group a{
+    display: inline-block;
+    color: #868686;
+    margin-right: 12px;
+    font-size: 12px;
+    padding-bottom: 5px;
+}
+.ui-menu-item-detail-group a::after{
+    padding-left: 12px;
+    content: " | ";
+    color: #ddd;
+}
+
+/* ui-backtop */
+.ui-backTop{
+    display: block;
+    position: fixed;
+    right: 2px;
+    bottom: 2px;
+    z-index: 9;
+    width: 40px;
+    height: 40px;
+    color: #fff;
+    background: rgba(120, 102, 102, 0.9);
+    
+}
+.ui-backTop::after {
+    content: '回到顶部';
+    display: block;
+    line-height: 20px;
+    text-align: center;
+}
+
+/* ui-slider */
+.ui-slider{
+    width: 700px;
+    height: 450px;
+    position: relative;
+    overflow: hidden;
+}
+.ui-slider-wrap{
+    width: 99999px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    transition: all .5s;
+}
+.ui-slider-wrap .item{
+    display: block;
+    float: left;
+    width: 700px;
+    height: 450px;
+}
+.ui-slider-arrow{
+    width: 700px;
+    height: 40px;
+    position: absolute;
+    margin-top: -20px;
+    top: 50%;
+}
+.ui-slider-arrow .item{
+    display: block;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 0;
+    background: url(../img/ui-slider-arrow.png) no-repeat;
+}
+.ui-slider-arrow .left{
+    left: 0;
+}
+.ui-slider-arrow .right{
+    right: 0;
+    background-position-x: -40px;
+}
+.ui-slider-process{
+    width: 700px;
+    height: 12px;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    bottom: 20px;
+}
+.ui-slider-process .item{
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background: url(../img/ui-slider-process.png) no-repeat;
+}
+.ui-slider-process .item_focus,
+.ui-slider-process .item:hover{
+    background-position-x: -23px;
+
 }
